# fastapi-users

./: .all-contributorsrc  .coveragerc  .cruft.json  .deepsource.toml  .editorconfig  .env.template  .env.test  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  Makefile  Pipfile  README.md  SECURITY.md  environment.yml  index.html  installation.html  mkdocs.yml  oauth_test.py  pyproject.toml  requirements-dev.txt  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_build.py  tox.ini  versions.json
.github/: FUNDING.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  codeql-analysis.yml  documentation.yml  pr-tests.yml  test.yml
.zed/: settings.json
10.0/: index.html
10.0/installation/: index.html
10.0/search/: search_index.json
10.0/src/: cookbook_create_user_programmatically.py
10.1/: 404.html  index.html  sitemap.xml
10.1/search/: search_index.json
10.1/src/: db_beanie_oauth.py
10.2/: index.html
10.2/search/: search_index.json
10.2/src/: db_sqlalchemy_oauth.py
10.3/: 404.html  index.html  sitemap.xml
10.3/src/: cookbook_create_user_programmatically.py  db_sqlalchemy.py  db_sqlalchemy_oauth.py
10.4/: 404.html  index.html  sitemap.xml
10.4/installation/: index.html
10.4/search/: search_index.json
10.4/src/: db_sqlalchemy_access_tokens.py
11.0/: 404.html  index.html
12.0/: 404.html  index.html
12.0/installation/: index.html
12.0/src/: db_beanie.py
12.1/: 404.html  index.html
12.1/installation/: index.html
12.1/search/: search_index.json
13.0/: index.html
13.0/installation/: index.html
13.0/src/: db_beanie_oauth.py
14.0/: 404.html  index.html
14.0/installation/: index.html
14.0/search/: search_index.json
14.0/src/: db_sqlalchemy.py
15.0/: 404.html  index.html
15.0/installation/: index.html
15.0/src/: cookbook_create_user_programmatically.py  db_beanie_access_tokens.py  db_sqlalchemy_oauth.py
9.2/: index.html
9.2/installation/: index.html
9.2/src/: db_tortoise_model.py  user_manager.py
9.3/: index.html  sitemap.xml
9.3/installation/: index.html
9.3/search/: search_index.json
9.3/src/: db_mongodb_access_tokens.py  db_tortoise_access_tokens_model.py
assets/javascripts/: bundle.23546af0.min.js.map  bundle.36a8f969.min.js  bundle.36a8f969.min.js.map  bundle.65293e7c.min.js  bundle.65293e7c.min.js.map  bundle.67e3edfb.min.js  bundle.67e3edfb.min.js.map  bundle.74d0b805.min.js  bundle.74d0b805.min.js.map  bundle.bd6ef04a.min.js  bundle.fc354861.min.js  bundle.fc354861.min.js.map  vendor.23350dc5.min.js  vendor.23350dc5.min.js.map  vendor.f81b9e8b.min.js.map
assets/stylesheets/: main.62d34fff.min.css.map  palette.c8acc6db.min.css.map
configuration/: full-example.html  model.html  oauth.html  password-validation.html
configuration/_next_router/: index.html
configuration/authentication/: cookie.html  index.html  jwt.html
configuration/databases/: mongodb.html  ormar.html  sqlalchemy.html  tortoise.html
configuration/full-example/: index.html
configuration/full_example/: index.html
configuration/model/: index.html
configuration/models/: index.html
configuration/oauth/: index.html
configuration/overview/: index.html
configuration/password-hash/: index.html
configuration/password-validation/: index.html
configuration/router/: index.html
configuration/routers/: auth.html  index.html  register.html  reset.html  users.html  verify.html
configuration/user-manager/: index.html
cookbook/create-user-programmatically/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/installation/: index.html
dev/search/: search_index.json
dev/src/: db_beanie_access_tokens.py  db_ormar.py  db_tortoise_access_tokens_model.py  db_tortoise_model.py  db_tortoise_oauth_adapter.py  db_tortoise_oauth_model.py  user_manager.py
docs/: .gitignore  Makefile  _next_router.md  full_example.md  index.md  installation.md  model.md  router.md
docs/authentication/: _next_authentication.md  jwt.md
docs/configuration/: _next_router.md  full-example.md  full_example.md  model.md  models.md  oauth.md  overview.md  password-hash.md  password-validation.md  router.md  schemas.md  (+1 more)
fastapi_users/: __init__.py  exceptions.py  fastapi_users.py  full_sqlalchemy.py  jwt.py  manager.py  models.py  openapi.py  password.py  router.py  schemas.py  scopes.py  types.py  user.py  utils.py
filuta_fastapi_users/: __init__.py  exceptions.py  fastapi_users.py  manager.py  openapi.py  schemas.py
installation/: index.html
latest/: 404.html  index.html
migration/: 08_to_1x.html  1x_to_2x.html  2x_to_3x.html  3x_to_4x.html  4x_to_5x.html
search/: search_index.json
src/: cookbook_create_user_programmatically.py  db_mongodb.py  db_sqlalchemy.py  db_sqlalchemy_access_tokens.py  db_sqlalchemy_oauth.py  db_tortoise.py  db_tortoise_access_tokens_adapter.py  db_tortoise_adapter.py  db_tortoise_oauth_model.py  full_mongodb.py  full_sqlalchemy.py  full_tortoise.py  oauth_full_mongodb.py  oauth_full_sqlalchemy.py  oauth_full_tortoise.py
tests/: conftest.py  test_authentication.py  test_authentication_authenticator.py  test_authentication_backend.py  test_authentication_base.py  test_authentication_cookie.py  test_authentication_jwt.py  test_authentication_strategy_db.py  test_authentication_strategy_jwt.py  test_authentication_strategy_redis.py  test_authentication_strategy_redis_session.py  test_authentication_token.py  test_authentication_transport_bearer.py  test_authentication_transport_cookie.py  test_db_base.py  test_db_interface.py  test_db_mongodb.py  test_db_ormar.py  test_db_sqlalchemy.py  test_db_tortoise.py  test_fastapi_users.py  test_jwt.py  test_manager.py  test_openapi.py  test_package.py  test_pydantic_v2.py  test_router.py  test_router_auth.py  test_router_oauth.py  test_router_refresh.py  test_router_register.py  test_router_register_activated.py  test_router_reset.py  test_router_users.py  test_router_verify.py  test_user.py
usage/: dependency-callables.html  flow.html  helpers.html  routes.html
(+577 files in other folders)
