[tool.black]
line-length = 120

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
env = [
    "PROFILE=TEST"
]

addopts= [
    "-v",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
pylint.max-args = 7

select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "C90", # McCabe
    "I", # isort
    "UP", # pyupgrade
    "PLC", "PLE", "PLR", "PLW", # Pylint
]

ignore = [
    # pycodestyle:
    "E501", # Line too long (covered by Black)
]

fix = true
format = "grouped"
show-source = true
target-version = "py311"

[tool.ruff.isort]
# Note: Ruff implicitly uses `profile = "black"`
combine-as-imports = true

[tool.cruft]
skip = [
    ".env",
    ".python-version",
    "filuta_fastapi_users/__init__.py",
]
